@@ -152,7 +152,7 @@ under the License.
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-     	  <outputDirectory>target</outputDirectory>
+         <outputDirectory>target</outputDirectory>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
@@ -183,7 +183,7 @@ under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-		<version>2.3.2</version>
+        <version>2.3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -232,12 +232,11 @@ under the License.
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>2.7</version>
-          </plugin>     
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
             <version>2.6</version>
-
           </plugin>
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -342,6 +341,66 @@ under the License.
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>hadoop_facebook</id>
+       <activation>
+        <property>
+          <name>hadoop</name>
+          <value>facebook</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.facebook.hadoop</groupId>
+          <artifactId>hadoop-core</artifactId>
+          <version>0.20.1</version>
+          <type>jar</type>
+          <scope>system</scope>
+          <systemPath>${hadoop.jar.path}</systemPath>
+        </dependency>
+      </dependencies>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/java/org/apache/giraph/hadoop</directory>
+            <excludes>
+              <exclude>BspTokenSelector.java</exclude>
+            </excludes>
+          </resource>
+        </resources>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>munge-maven-plugin</artifactId>
+            <version>1.0</version>
+            <executions>
+              <execution>
+                <id>munge</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>munge</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <symbols>HADOOP_FACEBOOK</symbols>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.2</version>
+            <configuration>
+              <excludes>
+                <exclude>**/BspTokenSelector.java</exclude>
+              </excludes>
+              <source>1.6</source>
+              <target>1.6</target>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
   <dependencies>
@@ -361,8 +420,8 @@ under the License.
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
       <version>${jackson.version}</version>
-	</dependency>
-	<dependency>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
       <version>${jackson.version}</version>
@@ -385,18 +444,23 @@ under the License.
           <artifactId>jms</artifactId>
         </exclusion>
       </exclusions>
-	</dependency>
-	<dependency>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
       <version>1.3.2</version>
     </dependency>
-	<dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>net.iharder</groupId>
       <artifactId>base64</artifactId>
       <version>2.3.8</version>
     </dependency>
-    	<dependency>
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20090211</version>
